# clld-phylogeny-plugin

./: .travis.yml  README.md  RELEASING.md  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml
src/clld_phylogeny_plugin/: __init__.py  datatables.py  interfaces.py  models.py  tree.py
src/clld_phylogeny_plugin/static/: clld_phylogeny_plugin.js  phylotree.css  phylotree.js
src/clld_phylogeny_plugin/templates/: tree.mako
src/clld_phylogeny_plugin/templates/parameter/: valuetable_html.mako
src/clld_phylogeny_plugin/templates/phylogeny/: description_html.mako  detail_html.mako
tests/: conftest.py  test_functional.py  test_selenium.py  test_unit.py
