[metadata]
name = clld-phylogeny-plugin
version = 1.6.0
author = Robert Forkel and Hans-Jörg Bibiko
author_email = dlce.rdm@eva.mpg.de
description = A clld plugin to support language phylogenies
long_description = file: README.md
long_description_content_type = text/markdown
keywords = linguistics
license = Apache 2.0
license_files = LICENSE
url = https://github.com/clld-phylogeny-plugin
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    newick
    attrs>=18.1
    clld>=4.0.3
    sqlalchemy
    zope.interface
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
clld_phylogeny_plugin =
    static/*
    templates/*

[options.extras_require]
dev =
    tox
    flake8
    wheel>=0.36
    twine
test =
    pytest-clld
    pytest>=5
    pytest-mock
    pytest-cov
    coverage>=4.2
    webtest

[bdist_wheel]
universal = 1

[flake8]
ignore = E711,E712,D100,D101,D103,D102,D301
max-line-length = 100
exclude = .tox

[tool:pytest]
minversion = 3.1
testpaths = tests
filterwarnings =
    ignore::sqlalchemy.exc.SAWarning
    ignore::sqlalchemy.exc.RemovedIn20Warning
addopts =
    --cov

[coverage:run]
source =
    clld_phylogeny_plugin
    tests

[coverage:report]
show_missing = true

[easy_install]
zip_ok = false

[tox:tox]
envlist = py38, py39, py310, py311, py312
isolated_build = true
skip_missing_interpreter = true

[testenv]
deps = .[test]
commands = pytest {posargs}
